<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/sharedTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/shared_element_section_title"
            app:layout_constraintBottom_toTopOf="@+id/sharedActivityButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <Button
            android:id="@+id/sharedActivityButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shared_element_activity_button"
            app:layout_constraintBottom_toTopOf="@+id/sharedNavigationButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sharedTitleTextView" />

        <Button
            android:id="@+id/sharedNavigationButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shared_element_fragment_button"
            app:layout_constraintBottom_toTopOf="@+id/multiSelectTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sharedActivityButton" />

        <TextView
            android:id="@+id/multiSelectTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/multiple_selection_section_title"
            app:layout_constraintBottom_toTopOf="@+id/multiSelectButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sharedNavigationButton" />

        <Button
            android:id="@+id/multiSelectButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/multiple_selection_button"
            app:layout_constraintBottom_toTopOf="@+id/fixedHeaderTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/multiSelectTextView" />

        <TextView
            android:id="@+id/fixedHeaderTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/fixed_header_section_title"
            app:layout_constraintBottom_toTopOf="@+id/fixedHeaderButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/multiSelectButton" />

        <Button
            android:id="@+id/fixedHeaderButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fixed_header_button"
            app:layout_constraintBottom_toTopOf="@+id/autoScrollTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fixedHeaderTextView" />

        <TextView
            android:id="@+id/autoScrollTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/auto_scroll_section_title"
            app:layout_constraintBottom_toTopOf="@+id/autoScrollButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fixedHeaderButton" />

        <Button
            android:id="@+id/autoScrollButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/auto_scroll_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/autoScrollTextView" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>